# bootrust

./: .gitignore  Cargo.toml  README.md  test
examples/: simple_example.rs
src/: asyncdao.rs  asyncdatabase.rs  autodeser.rs  autoserde.rs  cache.rs  common.rs  controller.rs  dao.rs  database.rs  entity.rs  entity_converter.rs  lib.rs  queryable.rs  repository.rs  server.rs  service.rs  sql_builder.rs
src/asyncdatabase/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/serde/: autode.rs  autoser.rs  mod.rs
src/server/: axum.rs
tests/: crud_test.rs  database_injection.rs  e_commerce_system_mysql_daos_test.rs  e_commerce_system_mysql_do_test.rs  mysql_dao_test.rs  mysql_daos_test.rs  postgres_async_daos.rs  sqlite_dao_test.rs
tests/crud/: e_commerce_system_mysql_do_test.rs  mod.rs  mysql_dao_test.rs
tests/entity_crud/: entity_mysql.rs  entity_postgres.rs  entity_sqlite.rs  mod.rs  mysql_types.rs  postgres_types.rs  queryable_postgres.rs  sqlite_types.rs
tests/mysql/: database_injection.rs  e_commerce_system_mysql_daos_test.rs  e_commerce_system_mysql_do_test.rs  mod.rs  mysql_dao_test.rs  mysql_daos_test.rs
tests/postgresql/: database_injection.rs  mod.rs
tests/postgresql_async/: mod.rs  postgres_async_daos.rs
tests/sqlite/: mod.rs  sqlite_dao_test.rs
tests/sqlite_async/: mod.rs  sqlite_async_daos.rs
