[package]
name = "bootrust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
serde ={version="1.0.217", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
mysql = "23.0"
r2d2_mysql = "23.0"
async-trait = "0.1.85"
http = "1.2.0"
axum = "0.8.1"
tower-service = "0.3.3"
tokio = {version = "1.43", features = ["sync", "macros", "rt", "rt-multi-thread", "signal"]}
tower = "0.5.2"
# actix-web = "4.9.0"




[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.2"
reqwest = "0.12.12"
