[package]
name = "bootrust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde ={version="1.0.217", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
r2d2 = {version="0.8", optional = true }
r2d2_sqlite = { version = "0.22", optional = true }
mysql = { version = "23.0", optional = true }
r2d2_mysql = { version = "23.0", optional = true }
async-trait = "0.1.85"
http = "1.2.0"
axum = "0.8.1"
tower-service = "0.3.3"
tokio = {version = "1.43", features = ["sync", "macros", "rt", "rt-multi-thread", "signal"]}
tower = "0.5.2"
bb8-postgres = { version = "0.9.0", optional = true }
bb8 = {version="0.9.0", optional = true }
tokio-postgres = { version= "0.7.13", features = ["with-chrono-0_4"], optional = true }
r2d2_postgres = {version="0.18.2", optional = true }
postgres = { version = "0.19.10", optional = true, features = ["with-chrono-0_4"] }


[features]

default = []
full = ["mysql", "sqlite", "postgresql", "postgresql_async", "mysql_async", "sqlite_async"]
postgresql = ["dep:r2d2", "dep:postgres", "dep:r2d2_postgres"]
mysql = ["dep:r2d2", "dep:mysql", "dep:r2d2_mysql"]
sqlite = ["dep:r2d2", "dep:rusqlite", "dep:r2d2_sqlite"]
postgresql_async = ["dep:bb8-postgres", "dep:tokio-postgres", "dep:bb8"]
mysql_async = ["dep:r2d2", "dep:mysql", "dep:r2d2_mysql"]
sqlite_async = ["dep:r2d2", "dep:rusqlite", "dep:r2d2_sqlite"]

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.2"
reqwest = "0.12.12"
