[package]
name = "bootrust"
version = "0.1.0"
edition = "2021"
authors = ["Hal Articode <halarticode@aiursoft.tech>"]
categories = ["orm"]
description = "An elegant macroless  data access layer abstraction, simple and easy-use  object-relational mapping powered by the Serde serialization framework. 一个优雅的无宏的数据访问层抽象, 由serde序列化框架提供支持的简单易用的对象关系映射"
keywords = ["orm", "database", "data access", "serde"]
license = "AGPL2.0"
repository = "https://github.com/tianzeshi-study/bootrust"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde ={version="1.0.217", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
r2d2 = {version="0.8", optional = true }
r2d2_sqlite = { version = "0.22", optional = true }
mysql = { version = "23.0", optional = true }
r2d2_mysql = { version = "23.0", optional = true }
async-trait = "0.1.85"
tokio = {version = "1.43", features = ["sync", "macros", "rt", "rt-multi-thread", "signal"]}
bb8-postgres = { version = "0.9.0", optional = true }
bb8 = {version="0.9.0", optional = true }
tokio-postgres = { version= "0.7.13", features = ["with-chrono-0_4"], optional = true }
r2d2_postgres = {version="0.18.2", optional = true }
postgres = { version = "0.19.10", optional = true, features = ["with-chrono-0_4"] }
bb8-redis = {version = "0.21.0", optional=true }
redis = { version = "0.29.1", features = ["connection-manager", "tokio-comp"], optional=true }
bincode = {version = "1.3.3", optional=false}


[features]

default = []
full = ["mysql", "sqlite", "postgresql", "postgresql_async", "mysql_async", "sqlite_async", "redis_async"]
postgresql = ["dep:r2d2", "dep:postgres", "dep:r2d2_postgres"]
mysql = ["dep:r2d2", "dep:mysql", "dep:r2d2_mysql"]
sqlite = ["dep:r2d2", "dep:rusqlite", "dep:r2d2_sqlite"]
postgresql_async = ["dep:bb8-postgres", "dep:tokio-postgres", "dep:bb8"]
mysql_async = ["dep:r2d2", "dep:mysql", "dep:r2d2_mysql"]
sqlite_async = ["dep:r2d2", "dep:rusqlite", "dep:r2d2_sqlite"]
redis_async = ["dep:bb8-redis", "dep:redis", "dep:bb8"]

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.2"
reqwest = "0.12.12"
